--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -7,13 +7,19 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <!-- Three.js Background Canvas -->
+  <div class="background-container">
+    <canvas id="backgroundCanvas"></canvas>
+  </div>
   <style>
     .container {
       justify-content: space-between;
       width: 80%;
       height: 80%;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Darker box shadow */
       padding: 20px;
       margin-top: -75px;
     }
@@ -25,41 +31,18 @@
       border-radius: 5px;
       text-align: center;
     }
-    .leaderboard_results {
-      position: relative;
-      top: -125px;
-      display: flex; /* Flexbox layout for columns */
-      flex-wrap: wrap; /* Allow wrapping */
-      gap: 30px; /* Gap between columns */
-    }
-    .leaderboard_column {
-      display: flex;
-      flex-direction: column;
-      max-width: 150px; /* Adjust width to fit columns */
-    }
-    .leaderboard_column ol {
-      padding: 0;
-      list-style-type: none; /* Remove default list styles */
-    }
-    .leaderboard_column ol li {
-      margin-bottom: 10px;
-      font-size: 14px; /* Decrease font size */
-      text-align: left;
+    .leaderboard_results{
+      position:relative;
+      top:-125px;
     }
   </style>
-</head>
-<body>
-  <!-- Three.js Background Canvas -->
-  <div class="background-container">
-    <canvas id="backgroundCanvas"></canvas>
-  </div>
   <div class="container">
     <h1 class="leaderboard-h1">Leaderboard</h1>
     <ul class="navigation-links">
       <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
     </ul>
-    <div class="leaderboard_results" id="leaderboardResults">
-      <!-- Columns will be dynamically added here -->
+    <div class="leaderboard_results">
+    <ol id="leaderboard"></ol> <!-- Changed to ordered list -->
     </div>
   </div>
   <script>
@@ -72,28 +55,17 @@
 
         // Check if the response is an array
         if (Array.isArray(users)) {
-          const leaderboardResults = document.getElementById('leaderboardResults');
-          const itemsPerColumn = 9; // Maximum number of items per column
-          let columnCount = Math.ceil(users.length / itemsPerColumn);
-
-          for (let i = 0; i < columnCount; i++) {
-            const column = document.createElement('div');
-            column.className = 'leaderboard_column';
-            const ol = document.createElement('ol');
-
-            for (let j = i * itemsPerColumn; j < Math.min(users.length, (i + 1) * itemsPerColumn); j++) {
-              const user = users[j];
-              const listItem = document.createElement('li');
-              listItem.textContent = `#${j + 1} ${user.username} - Rating: ${user.rating}`;
-              ol.appendChild(listItem);
-            }
-
-            column.appendChild(ol);
-            leaderboardResults.appendChild(column);
-          }
+          const leaderboardElement = document.getElementById('leaderboard');
+          let place = 1;
+          users.forEach(user => {
+            const listItem = document.createElement('li');
+            listItem.textContent = `#${place} ${user.username} - Rating: ${user.rating}`;
+            leaderboardElement.appendChild(listItem);
+            place++;
+          });
         } else {
           console.error('Unexpected data format:', users);
-          document.getElementById('leaderboardResults').innerHTML = '<li>Error loading leaderboard data.</li>';
+          document.getElementById('leaderboard').innerHTML = '<li>Error loading leaderboard data.</li>';
         }
       })
       .catch(error => console.error('Error fetching leaderboard data:', error));
