--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -31,9 +31,42 @@
       border-radius: 5px;
       text-align: center;
     }
-    .leaderboard_results{
-      position:relative;
-      top:-125px;
+    .leaderboard_results {
+      position: relative;
+      top: -125px;
+      display: flex; /* Flexbox layout for columns */
+      flex-wrap: wrap; /* Allow wrapping */
+      justify-content: flex-start; /* Align columns to the left */
+    }
+    .leaderboard_column {
+      flex: 1; /* Allow columns to grow equally */
+      max-width: 200px; /* Set maximum width to control column size */
+      margin-right: 20px; /* Space between columns */
+    }
+    .leaderboard_column ol {
+      padding: 0;
+      list-style-type: none; /* Remove default list styles */
+    }
+    .leaderboard_column ol li {
+      margin-bottom: 10px;
+      font-size: 16px; /* Original font size */
+      color: black; /* Font color */
+    }
+    .leaderboard-h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .navigation-links {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    .navigation-links li a {
+      text-decoration: none;
+      color: black;
     }
   </style>
   <div class="container">
@@ -41,8 +74,8 @@
     <ul class="navigation-links">
       <li class="home-button-leaderboard"><a href="main.html"><i class="fas fa-home"></i></a></li>
     </ul>
-    <div class="leaderboard_results">
-    <ol id="leaderboard"></ol> <!-- Changed to ordered list -->
+    <div class="leaderboard_results" id="leaderboardResults">
+      <!-- Columns will be dynamically added here -->
     </div>
   </div>
   <script>
@@ -55,17 +88,28 @@
 
         // Check if the response is an array
         if (Array.isArray(users)) {
-          const leaderboardElement = document.getElementById('leaderboard');
-          let place = 1;
-          users.forEach(user => {
-            const listItem = document.createElement('li');
-            listItem.textContent = `#${place} ${user.username} - Rating: ${user.rating}`;
-            leaderboardElement.appendChild(listItem);
-            place++;
-          });
+          const leaderboardResults = document.getElementById('leaderboardResults');
+          const itemsPerColumn = 9; // Maximum number of items per column
+          let columnCount = Math.ceil(users.length / itemsPerColumn);
+
+          for (let i = 0; i < columnCount; i++) {
+            const column = document.createElement('div');
+            column.className = 'leaderboard_column';
+            const ol = document.createElement('ol');
+
+            for (let j = i * itemsPerColumn; j < Math.min(users.length, (i + 1) * itemsPerColumn); j++) {
+              const user = users[j];
+              const listItem = document.createElement('li');
+              listItem.textContent = `#${j + 1} ${user.username} - Rating: ${user.rating}`;
+              ol.appendChild(listItem);
+            }
+
+            column.appendChild(ol);
+            leaderboardResults.appendChild(column);
+          }
         } else {
           console.error('Unexpected data format:', users);
-          document.getElementById('leaderboard').innerHTML = '<li>Error loading leaderboard data.</li>';
+          document.getElementById('leaderboardResults').innerHTML = '<li>Error loading leaderboard data.</li>';
         }
       })
       .catch(error => console.error('Error fetching leaderboard data:', error));
