--- a/public/archive.html
+++ b/public/archive.html
@@ -146,127 +146,131 @@
         
             // Run the check when the DOM content is fully loaded
             document.addEventListener('DOMContentLoaded', checkIfMobile);
-        </script>        
+        </script>
         <!-- Include jQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2" crossorigin="anonymous"></script>
         <!-- Include Chess.js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.min.js" defer></script>
         <!-- Include Chessboard.js -->
-        <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous" onload="initializeChessboard()" onerror="handleChessboardError()" defer></script>
+        <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js" integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD" crossorigin="anonymous" defer></script>
         <script>
-    var game;
-    var board;
-    var currentMoveIndex = 0;
-    
-    function initializeChessboard() {
-        console.log('Initializing Chessboard.js...');
+            var game;
+            var board;
+            var currentMoveIndex = 0;
 
-        // Initialize Chessboard
-        board = Chessboard('board', {
-            draggable: true,
-            position: 'start'
-        });
+            function initializeChessboard() {
+                console.log('Initializing Chessboard.js...');
 
-        // Initialize Chess game
-        game = new Chess();
+                // Initialize Chessboard
+                board = Chessboard('board', {
+                    draggable: true,
+                    position: 'start'
+                });
 
-        // Load game button event
-        document.getElementById('loadGameBtn').addEventListener('click', function() {
-            var pgnInput = document.getElementById('pgnInput').value;
-            loadGame(pgnInput);
-        });
+                // Initialize Chess game
+                game = new Chess();
 
-        // Previous move button event
-        document.getElementById('prevMoveBtn').addEventListener('click', function() {
-            if (currentMoveIndex > 0) {
-                currentMoveIndex--;
-                updateBoard();
+                // Load game button event
+                document.getElementById('loadGameBtn').addEventListener('click', function() {
+                    var pgnInput = document.getElementById('pgnInput').value;
+                    loadGame(pgnInput);
+                });
+
+                // Previous move button event
+                document.getElementById('prevMoveBtn').addEventListener('click', function() {
+                    if (currentMoveIndex > 0) {
+                        currentMoveIndex--;
+                        updateBoard();
+                    }
+                });
+
+                // Next move button event
+                document.getElementById('nextMoveBtn').addEventListener('click', function() {
+                    if (currentMoveIndex < game.history().length) {
+                        currentMoveIndex++;
+                        updateBoard();
+                    }
+                });
             }
-        });
 
-        // Next move button event
-        document.getElementById('nextMoveBtn').addEventListener('click', function() {
-            if (currentMoveIndex < game.history().length) {
-                currentMoveIndex++;
-                updateBoard();
+            function loadGame(pgn) {
+                console.log('Loading PGN:', pgn);
+
+                game.reset(); // Reset the game to initial state
+                board.position('start'); // Reset board to initial state
+
+                game.load_pgn(pgn); // Load new game
+
+                // Update the board with the game state
+                board.position(game.fen()); 
+
+                currentMoveIndex = 0; // Start at the beginning
+                displayGameInfo(pgn);
+                updateMoveList();
             }
-        });
-    }
 
-    function loadGame(pgn) {
-        game.reset(); // Reset the game to initial state
-        board.position('start'); // Reset board to initial state
+            function displayGameInfo(pgn) {
+                var players = getPgnPlayers(pgn);
+                if (players) {
+                    var gameInfoDiv = document.getElementById('gameInfo');
+                    gameInfoDiv.innerHTML = `<p>${players.white} (W) vs ${players.black} (B)</p>`;
+                }
+            }
 
-        game.load_pgn(pgn); // Load new game
-        board.position(game.fen()); // Update board with new game state
+            function getPgnPlayers(pgn) {
+                var regex = /\[White "([^"]*)"\][\s\S]*\[Black "([^"]*)"\]/;
+                var match = pgn.match(regex);
+                if (match) {
+                    return {
+                        white: match[1],
+                        black: match[2]
+                    };
+                }
+                return null;
+            }
 
-        currentMoveIndex = 0; // Start at the beginning
-        displayGameInfo(pgn);
-        updateMoveList();
-    }
+            function updateMoveList() {
+                var moveList = document.getElementById('moveList');
+                var moves = game.history({ verbose: true });
+                moveList.innerHTML = '';
+                moves.forEach(function(move, index) {
+                    var moveItem = document.createElement('li');
+                    moveItem.textContent = move.san;
+                    moveItem.addEventListener('click', function() {
+                        currentMoveIndex = index;
+                        updateBoard();
+                    });
+                    moveList.appendChild(moveItem);
+                });
+            }
 
-    function displayGameInfo(pgn) {
-        var players = getPgnPlayers(pgn);
-        if (players) {
-            var gameInfoDiv = document.getElementById('gameInfo');
-            gameInfoDiv.innerHTML = `<p>${players.white} (W) vs ${players.black} (B)</p>`;
-        }
-    }
+            function updateBoard() {
+                var moves = game.history({ verbose: true });
+                if (currentMoveIndex < moves.length && currentMoveIndex >= 0) {
+                    board.position(moves[currentMoveIndex].fen);
+                }
+                updateMoveList();
+            }
 
-    function getPgnPlayers(pgn) {
-        var regex = /\[White "([^"]*)"\][\s\S]*\[Black "([^"]*)"\]/;
-        var match = pgn.match(regex);
-        if (match) {
-            return {
-                white: match[1],
-                black: match[2]
-            };
-        }
-        return null;
-    }
+            function loadGameFromFile(filePath) {
+                fetch(filePath)
+                    .then(response => response.text())
+                    .then(pgn => loadGame(pgn))
+                    .catch(error => console.error('Error loading PGN file:', error));
+            }
 
-    function updateMoveList() {
-        var moveList = document.getElementById('moveList');
-        var moves = game.history({ verbose: true });
-        moveList.innerHTML = '';
-        moves.forEach(function(move, index) {
-            var moveItem = document.createElement('li');
-            moveItem.textContent = move.san;
-            moveItem.addEventListener('click', function() {
-                currentMoveIndex = index;
-                updateBoard();
+            document.addEventListener('DOMContentLoaded', function() {
+                initializeChessboard();
+
+                document.querySelectorAll('.game-file-link').forEach(link => {
+                    link.addEventListener('click', function(event) {
+                        event.preventDefault();
+                        var filePath = this.getAttribute('data-file');
+                        loadGameFromFile(filePath);
+                    });
+                });
             });
-            moveList.appendChild(moveItem);
-        });
-    }
-
-    function updateBoard() {
-        var moves = game.history({ verbose: true });
-        if (currentMoveIndex < moves.length && currentMoveIndex >= 0) {
-            board.position(moves[currentMoveIndex].fen);
-        }
-        updateMoveList();
-    }
-
-    function loadGameFromFile(filePath) {
-        fetch(filePath)
-            .then(response => response.text())
-            .then(pgn => loadGame(pgn))
-            .catch(error => console.error('Error loading PGN file:', error));
-    }
-
-    document.addEventListener('DOMContentLoaded', function() {
-        initializeChessboard();
-
-        document.querySelectorAll('.game-file-link').forEach(link => {
-            link.addEventListener('click', function(event) {
-                event.preventDefault();
-                var filePath = this.getAttribute('data-file');
-                loadGameFromFile(filePath);
-            });
-        });
-    });
-</script>
+        </script>
     </div>
 </body>
 </html>
